Fix squished image in safari

--- a/source/stylesheets/modules/_mosaic-block.scss
+++ b/source/stylesheets/modules/_mosaic-block.scss
@@ -95,3 +95,7 @@ $mosaic-gutter: 40px;
 .image-container--medium {
   width: 50%;
 }
+
+.image-container--outer {
+  flex-basis: 110%;
+}
